--- a/package.json
+++ b/package.json
@@ -46,5 +46,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "netlify-cli": "^15.1.1"
+  },
+  "author": "",
+  "license": "ISC"
 }
